# aero-pi-cam

./: .dockerignore  .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTE.md  DOCKER.md  Dockerfile  Dockerfile.test  LICENSE  MANIFEST.in  PYTHON_VERSION.md  README.md  SECURITY.md  TEST_PIP_INSTALL.md  aero-pi-cam.service  config.example.yaml  docker-compose.test.yml  docker-compose.yml  install.sh  jest.config.cjs  package-lock.json  package.json  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tsconfig.json  uninstall.sh  webcam-cfp.service
.cursor/commands/: quality-check.md  quality-fix.md
.cursor/rules/: changelog.mdc  code-guidelines.mdc
.github/actions/setup-python-deps/: action.yml
.github/workflows/: quality.yml
aero_pi_cam/: __init__.py  __main__.py  config.py  dummy_api.py  exif.py  main.py  overlay.py  setup.py  sun.py  uninstall.py  upload.py  upload_api.py  upload_sftp.py  upload_sftp_meta_json.py
aero_pi_cam/capture/: __init__.py  capture.py  rtsp_scan.py
aero_pi_cam/core/: __init__.py  __main__.py  config.py  dependencies.py  main.py  scheduler.py  workflow.py
aero_pi_cam/overlay/: __init__.py  exif.py  overlay.py
aero_pi_cam/setup/: __init__.py  setup.py  uninstall.py
aero_pi_cam/upload/: __init__.py  api.py  dummy_api.py  sftp.py  sftp_cleanup.py  sftp_history.py  sftp_meta_json.py  upload.py
aero_pi_cam/utils/: __init__.py  duration.py
aero_pi_cam/weather/: __init__.py  day_night.py  metar.py  sun.py
docker/: Dockerfile  Dockerfile.test  docker-compose.test.yml  docker-compose.yml
docs/: ADVANCED_USAGE.md  CONTRIBUTE.md  PYTHON_VERSION.md  README.md  TEST_PIP_INSTALL.md  _config.yml  index.html  openapi.json
docs/_layouts/: default.html  page.html
docs/assets/css/: main.css
scripts/: setup-venv.sh  test-pip-install.sh
src/: capture.ts  config.py  config.ts  main.py  main.ts  metar.ts  overlay.py  overlay.ts  sun.ts  upload.py  upload.ts
tests/: __init__.py  capture.test.ts  config.test.ts  conftest.py  metar.test.ts  sun.test.ts  test_capture.py  test_config.py  test_day_night.py  test_debug.py  test_dependencies.py  test_duration.py  test_exif.py  test_main.py  test_metar.py  test_overlay.py  test_rtsp_scan.py  test_scheduler.py  test_sftp_cleanup.py  test_sftp_history.py  test_sun.py  test_upload.py  test_upload_api.py  test_upload_sftp.py  test_upload_sftp_meta_json.py  test_workflow.py  upload.test.ts
