[project]
name = "aero-pi-cam"
version = "1.0.0"
description = "Raspberry Pi webcam capture service for LFAS aerodrome"
authors = [
    {name = "Nicolas Massart", email = "contact@caenfalaiseplaneurs.fr"}
]
license = "GPL-3.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.1",
    "suncalc>=0.1.0",
    "pillow>=10.4.0",
    "cairosvg>=2.7.0",
]

[project.scripts]
webcam = "aero_pi_cam.main:main"
aero-pi-cam-setup = "aero_pi_cam.setup:main"
aero-pi-cam-uninstall = "aero_pi_cam.uninstall:main"

[tool.setuptools]
packages = ["aero_pi_cam"]

[tool.setuptools.package-data]
aero_pi_cam = ["images/**/*", "fonts/*.ttf"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=aero_pi_cam --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning:suncalc.*",
    "ignore::RuntimeWarning:suncalc.*",
]

